--- a/index.html
+++ b/index.html
@@ -26,31 +26,31 @@ body
 <ul>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+Player moves the cat and tries to make it to the box.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+I want them to experience a challenge of trying to get to the box while they are being chased by a enemies.
 </li>
 
 <li><strong>Genre:</strong>
-A single sentence that places the game within a game genre or a hybrid of genres.
+Not sure.
 </li>
 
 <li><strong>Game play:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+Player uses the arrow keys to move the cat about the map and try to get to the box. Player wins if they get to the box. Player Loses is they are caught by the enemies.
 </li>
 
 <li><strong>Prototype goal:</strong>
-What game mechanic is this prototype evaluating?
+Spawning a random number of enemies and random intervals and have them chase the player.
 </li>
 
 <li><strong>Features:</strong>
-What are the unique aspects of your game that set it apart?
+Enemies chasing the player.
 </li>
 
 <li><strong>Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, put it here. If the game is abstract, then say so.
+You are a cat that wants to get adopted by waiting in a box for shelter. The animal control is trying to catch you before you can get adopted.
 </li>
 
 <li><strong>Story:</strong>
@@ -58,11 +58,11 @@ If the game has a story, summarize it in a paragraph. How will the dramatic tens
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+Anyone.
 </li>
 
 <li><strong>Play time:</strong>
-How long does your game take to play?
+Should not take very long.
 </li>
 
 <li><strong>Strategies:</strong>
@@ -70,11 +70,11 @@ What player strategies do you expect will be effective at playing this game?
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+Several of the phaser examples.
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing from a Phaser Example, you must say so here.
+Didn't really base it off of anything else.
 </li>
 
 </ul>
